--- a/coders/Makefile.in
+++ b/coders/Makefile.in
@@ -104,6 +104,7 @@ BIN_DIR = @BIN_DIR@
 BZIPDelegate = @BZIPDelegate@
 BrowseDelegate = @BrowseDelegate@
 CC = @CC@
+CCMALLOCDelegate = @CCMALLOCDelegate@
 CGMDecodeDelegate = @CGMDecodeDelegate@
 CPP = @CPP@
 CXX = @CXX@
