--- a/utilities/Makefile.in
+++ b/utilities/Makefile.in
@@ -105,6 +105,7 @@ BIN_DIR = @BIN_DIR@
 BZIPDelegate = @BZIPDelegate@
 BrowseDelegate = @BrowseDelegate@
 CC = @CC@
+CCMALLOCDelegate = @CCMALLOCDelegate@
 CGMDecodeDelegate = @CGMDecodeDelegate@
 CPP = @CPP@
 CXX = @CXX@
