--- a/jbig/Makefile
+++ b/jbig/Makefile
@@ -10,6 +10,8 @@ CCFLAGS = -O2 -W
 
 CFLAGS = $(CCFLAGS) -I../libjbig
 
+VERSION=1.2
+
 all: lib pbm
 	@echo "Enter 'make test' in order to start some automatic tests."
 
@@ -19,7 +21,7 @@ lib:
 pbm: lib
 	(cd pbmtools; make "CC=$(CC)" "CFLAGS=$(CFLAGS)")
 
-test:
+test: lib pbm
 	(cd libjbig;  make "CC=$(CC)" "CFLAGS=$(CFLAGS)" test)
 	(cd pbmtools; make "CC=$(CC)" "CFLAGS=$(CFLAGS)" test)
 
@@ -28,6 +30,18 @@ clean:
 	(cd libjbig; make clean)
 	(cd pbmtools; make clean)
 
+DISTHOST = faui01c.informatik.uni-erlangen.de
+DISTUID  = mskuhn
+DISTPATH = ftp/ISO/JBIG
+
 distribution: clean
 	rm -f libjbig/libjbig.a
-	(cd ..; tar -c -v --exclude RCS -f jbigkit.tar jbigkit)
+	(cd ..; tar -c -v --exclude RCS -f jbigkit-$(VERSION).tar jbigkit ; \
+	  gzip -9f jbigkit-$(VERSION).tar )
+	ssh -l $(DISTUID) $(DISTHOST) rm -f \
+	  $(DISTPATH)/jbigkit-$(VERSION).tar.gz \
+	  $(DISTPATH)/jbigkit-$(VERSION)-announce.txt
+	scp ../jbigkit-$(VERSION).tar.gz $(DISTUID)@$(DISTHOST):$(DISTPATH)/
+	scp ANNOUNCE \
+	  $(DISTUID)@$(DISTHOST):$(DISTPATH)/jbigkit-$(VERSION)-announce.txt
+	mv ../jbigkit-$(VERSION).tar.gz $(HOME)/.www/download/
