--- a/Magick++/lib/Makefile.in
+++ b/Magick++/lib/Makefile.in
@@ -72,6 +72,7 @@ pkgincludedir = $(includedir)/Magick++
 AMTAR = @AMTAR@
 AS = @AS@
 AWK = @AWK@
+AutotraceDecodeDelegate = @AutotraceDecodeDelegate@
 BIN_DIR = @BIN_DIR@
 BZIPDelegate = @BZIPDelegate@
 BrowseDelegate = @BrowseDelegate@
