--- a/utilities/Makefile.in
+++ b/utilities/Makefile.in
@@ -151,6 +151,7 @@ LIB_DIR = @LIB_DIR@
 LIB_DL = @LIB_DL@
 LIB_DPS = @LIB_DPS@
 LIB_FPX = @LIB_FPX@
+LIB_GDI32 = @LIB_GDI32@
 LIB_GS = @LIB_GS@
 LIB_HDF = @LIB_HDF@
 LIB_JBIG = @LIB_JBIG@
